# pocket-trader

./: .gitignore  README.md  components.json  drizzle.config.ts  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/: 01-project-structure.md  02-security-deployment.md  03-authentication.md  04-database-schema.md  05-development-approach.md  06-code-organization.md  07-api-routes.md  08-code-style.md  09-personalization.md  always.md
drizzle/: 0000_great_lady_ursula.sql  0000_nostalgic_lady_vermin.sql  0000_serious_lyja.sql  0001_ancient_retro_girl.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
migrations/: create_trades_table.sql
scripts/: hash-password.ts
src/app/: layout.tsx  mockpage.tsx  page.tsx
src/app/api/coins/: route.ts
src/app/api/fear-greed/: route.ts
src/app/api/price-history/: route.ts
src/app/api/price-stream/: route.ts
src/app/api/trades/: route.ts
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/main/: CoinSearch.tsx  FearGreedIndex.tsx  PriceChart.tsx  ProfitChart.tsx  TradeDetails.tsx
src/components/providers/: QueryProvider.tsx
src/lib/: auth.ts  fear-greed-index.ts  session-file.ts  users.ts
src/lib/business/: bithumb.ts  executor.ts  scheduler.ts  serpapi.ts  trading-ai.ts  upbit.ts
src/lib/db/: index.ts  schema.ts  trade-history.ts  trading-settings.ts  users.ts
src/lib/hooks/business/: useAuth.ts
src/lib/hooks/queries/: queryClient.ts  useCoins.ts  useFearAndGreed.ts  useTrades.ts  (+2 more)
src/lib/utils/: jwt.ts
src/types/: api-type.ts  api.ts
(+5 files in other folders)
