[project]
name = "pocket-trader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.14.0",
    "plotly>=6.5.0",
    "python-bithumb>=0.1.3",
    "python-dotenv>=1.2.1",
    "pyupbit>=0.2.34",
    "schedule",
    "psycopg2-binary>=2.9.0",
]
